# work-like-me

./: .gitignore  CLAUDE.md  README.md  install.sh
.claude-plugin/: marketplace.json
the-simulacrum/: README.md  pyproject.toml
the-simulacrum/src/: simulacrum.py
wlm/: pyproject.toml
wlm/plugins/cpa/: README.md
wlm/plugins/cpa/.claude-plugin/: plugin.json
wlm/plugins/cpa/skills/rank-finance-decisions/: SKILL.md
wlm/plugins/cpa/skills/tax-intake-and-research/: SKILL.md
wlm/plugins/mechanical/: README.md
wlm/plugins/mechanical/.claude-plugin/: plugin.json
wlm/plugins/mechanical/skills/rank-mechanical-decisions/: SKILL.md
wlm/plugins/ppt/: README.md
wlm/plugins/ppt/.claude-plugin/: plugin.json
wlm/plugins/ppt/skills/ppt-guizang-style/: SKILL.md
wlm/plugins/ppt/skills/ppt-style-selector/: SKILL.md
wlm/plugins/swe/: README.md
wlm/plugins/swe/.claude-plugin/: plugin.json
wlm/plugins/swe/skills/create-merge-request/: SKILL.md
wlm/plugins/swe/skills/find-code-reviewer/: SKILL.md
wlm/plugins/swe/skills/finish-work/: SKILL.md
wlm/plugins/swe/skills/git-commit-push/: SKILL.md
wlm/plugins/swe/skills/git-start-work/: SKILL.md
wlm/plugins/swe/skills/manage-virtual-environments/: SKILL.md
wlm/plugins/swe/skills/onboard-agentic-dev-flow/: SKILL.md
wlm/plugins/swe/skills/onboard-repo/: SKILL.md
wlm/plugins/swe/skills/prepare-code-for-commit/: SKILL.md
wlm/plugins/swe/skills/project-dev-setup/: SKILL.md
wlm/plugins/swe/skills/start-work/: SKILL.md
wlm/plugins/worker/: README.md
wlm/plugins/worker/.claude-plugin/: plugin.json
(+24 files in other folders)
