[project]
name = "the-simulacrum"
version = "1.0.0"
description = "A replica agent that works on behalf of the user"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.27.0",
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0.0",
]

[project.scripts]
simulacrum = "src.agent:main"
